[GREEN] Prevent duplicate rating per repair order